--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 
-<input type="text" #text/>
-<button (click)="OnClickMe(text.value)">Click me!</button>
-
+<!-- <input #box (keyup)="onKey(box.value)">
+<p>{{values}}</p> -->
+<input #box (keyup)="0">
+    <p>{{box.value}}</p>
 
